redactable/tests/ui/sensitive_display_dynamic_width_rejected.rs
use redactable::SensitiveDisplay;

#[derive(SensitiveDisplay)]
#[error("value {value:.*}")]
struct DynamicPrecision {
    value: String,
}

#[derive(SensitiveDisplay)]
#[error("value {value:width$}")]
struct DynamicWidth {
    value: String,
}

fn main() {}
